@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c85651dfb32a287851c92b1501244d81879286fe ChangeLog
+SHA1 64f074095faf24f4e4dd1f23ab73daf43d9d9456 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 f33a524126bd793e01b2a4a92db6b833b0226a8f MANIFEST
-SHA1 fd9469352a4a9d80d76e924851324d4067f3a513 META.yml
-SHA1 0ed551460ee76ab4f8a7dffbfb38c36133456890 Makefile.PL
+SHA1 c71fbe4b541634517e2f4c4cb8c3f4726d72036a META.yml
+SHA1 3c9fd6540a152b9c1866ee24a928eda94eac36b8 Makefile.PL
 SHA1 10ec07fde850bf730c56fd1b1d74e3b3aaf10bfa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 3bc46c4641916a7f6741b90e998e4069784bc1df lib/Net/FullAuto.pm
+SHA1 52f7ab0ca0d42bb74fb5f9df8975eab00ee3ecff lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -41,13 +41,13 @@ SHA1 9783a046faea98fe0ba53f6397a4e264c06e6db8 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 0fa60c2ccca0f609c1b13d22b5e84d45e1934c47 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 15e1ceb275d7f2097fbb544ca104b1928b3869a5 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 6a2d8ed8dfce8911f59664197b3c5febbd5de349 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 ec8f658a832d3debe70faf0f97fc8954ae17eb23 lib/Net/FullAuto/FA_Core.pm
+SHA1 db12ad6b397264d2fa11379ca7cd58a5ef109a79 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0pQ/AACgkQdsVAdUjO9IlF4wCcDpMUY7EdRjhtYL9ZI4VG0TBK
-LwMAn05wAN3NvJyIUrM8xDWmNYkfY4Me
-=nsDG
+iEYEARECAAYFAk0ruKwACgkQdsVAdUjO9IkqegCeO/FbQT9zs+XjMBgUXC9FdDIe
+B7UAoJvyqUo8LNR826XGPKpx2TeLxfQy
+=pTsq
 -----END PGP SIGNATURE-----
