@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.92';
+our $VERSION='0.93';
 
 
 use 5.005;
