@@ -25,6 +25,16 @@
 ################################################################
 
 
+2011-01-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.93 released.
+
+        * New service/daemon functionality now implemented.
+          FullAuto can not be configured as a service/daemon.
+          (Most of the change occured in the Term::Menus
+           module).
+
+
 2011-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.92 released.
